Migrate more integration tests to NIO.2